update angular config with style preprocessor options

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,12 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./public/SCSS"
+              ]
+            }
           },
           "configurations": {
             "production": {
